# TinyMinecraft

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt
data/: noise.json  world_gen.json
data/block/: 00_air.json  01_grass.json  02_dirt.json  03_stone.json  04_sand.json  05_log.json  06_snow.json  07_water.json  08_sandstone.json  09_glass.json  10_leaves.json  11_tallgrass.json
include/: Camera.h  Game.h  Renderer.h  Shader.h  Window.h  gfx.h
include/Application/: Game.h  InputHandler.h  MouseButton.h  Window.h
include/Entity/: Player.h  PlayerController.h
include/Events/: Event.h  EventHandler.h
include/Events/Entity/: PlayerEvents.h
include/Events/Input/: KeyboardEvents.h  MouseEvents.h
include/Geometry/: Mesh.h  geometry.h
include/Graphics/: BufferObject.h  OrthographicCamera.h  Renderer.h  Renderer2D.h  Shader.h  Texture.h  VertexArray.h  WireframeRenderer.h  gfx.h
include/Math/: NoiseManager.h  misc.h  seed.h  splines.h
include/Scene/: Camera.h  PlayerCameras.h
include/UI/: Text.h  UserInterface.h
include/Utils/: Logger.h  NonCopyable.h  NonMovable.h  Printable.h  Profiler.h  Singleton.h  defs.h  mathgl.h  noise.h  utils.h
include/World/: Biome.h  Block.h  BlockAtlas.h  BlockFace.h  BlockType.h  Chunk.h  World.h  WorldGeneration.h
include/utils/: math.h
resources/: config.json
resources/shaders/: Wireframe.fs  Wireframe.vs  basic.fs  block.fs  block.vs  block_solid.fs  block_solid.vs  block_translucent.fs  block_translucent.vs  debug_quad.fs  depth.fs  depth.vs  models.vs  text.fs  text.vs  ui.fs  ui.vs
resources/shaders/Renderer2D/: Line.fs  Line.vs  Rect.fs  Rect.vs  Text.fs  Text.vs
src/: Camera.cpp  Game.cpp  Renderer.cpp  Shader.cpp  Window.cpp  main.cpp
src/Application/: Game.cpp  InputHandler.cpp  Window.cpp
src/Entity/: Player.cpp  PlayerController.cpp
src/Events/: EventHandler.cpp
src/Events/Entity/: PlayerEvents.cpp
src/Events/Input/: KeyboardEvents.cpp  MouseEvents.cpp
src/Geometry/: Mesh.cpp  geometry.cpp
src/Graphics/: BufferObject.cpp  OrthographicCamera.cpp  Renderer.cpp  Renderer2D.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  WireframeRenderer.cpp
src/Math/: NoiseManager.cpp  misc.cpp  seed.cpp  splines.cpp
src/Scene/: Camera.cpp  PlayerCameras.cpp
src/UI/: Text.cpp  UserInterface.cpp
src/Utils/: Logger.cpp  Profiler.cpp  noise.cpp  utils.cpp
src/World/: Biome.cpp  Block.cpp  BlockAtlas.cpp  BlockFace.cpp  Chunk.cpp  World.cpp  WorldGeneration.cpp
